src/contentscript/overlay/root/overlayManager.css
.dapplets-overlay-frame {
  position: fixed;
  z-index: 2147483647;
  top: 0;
  left: 100%;

  /* -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none; */

  /* user-select: none; */
  direction: ltr;

  height: 100%;
  margin: 0;
  padding: 0;

  font-family: Roboto, sans-serif;
  font-size: 14px;
  line-height: 20px;

  background: #fff;
  border: 0;

  -webkit-tap-highlight-color: rgb(255 255 255 / 0%);
}

.dapplets-overlay-collapsed {
  transform: translateX(0) !important;
}

.dapplets-overlay-collapsed .toggleOverlay {
  left: -100px;
}

.dapplets-overlay-hidden {
  display: none;
}

@media screen and (min-width: 0) {
  .dapplets-overlay-frame {
    transform: translateX(-100%);
    width: 470px !important;
    transition: transform 0.15s cubic-bezier(0.55, 0, 0.2, 0.8);
  }
}

.dapplets-overlay-frame.dapplets-overlay-collapsed [class*='toggleOverlay'] {
  left: -100px;
}

.dapplets-overlay-frame.dapplets-overlay-collapsed .toggleOverlay {
  left: -100px;
}

@media screen and (min-width: 0) and (max-width: 640px) {
  .dapplets-overlay-collapsed .toggleOverlay {
    left: -100px;
  }

  .dapplets-overlay-frame {
    transform: translateX(-100%);
    width: 100% !important;
    transition: transform 0.15s cubic-bezier(0.55, 0, 0.2, 0.8);

    /* width: 640px !important; */
  }

  .dapplets-overlay-frame.dapplets-overlay-collapsed [class*='toggleOverlay'] {
    left: -100px;
  }

  .dapplets-overlay-frame.dapplets-overlay-collapsed .toggleOverlay {
    left: -100px;
  }
}

#dapplets-overlay-react-app {
  height: 100%;
}

